restaurant-api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: restaurant-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: restaurant-service
  template:
    metadata:
      labels:
        app: restaurant-service
    spec:
      containers:
      - name: restaurant-service
        image: khalilmaadani120399/restaurant-service:latest 
        ports:
        - containerPort: 5000

---
apiVersion: v1
kind: Service
metadata:
  name: restaurant-service
spec:
  selector:
    app: restaurant-service
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
  type: NodePort
