ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: restaurant-booking-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: restaurant-booking.local
    http:
      paths:
      - path: /booking
        pathType: Prefix
        backend:
          service:
            name: booking-service
            port:
              number: 8080
      - path: /restaurant
        pathType: Prefix
        backend:
          service:
            name: restaurant-service
            port:
              number: 5000
