istio-virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: restaurant-booking-vs
spec:
  hosts:
    - "*"
  gateways:
    - restaurant-booking-gateway
  http:
    - match:
        - uri:
            prefix: /restaurants
      route:
        - destination:
            host: restaurant-service
            port:
              number: 5000

    - match:
        - uri:
            prefix: /bookings
      route:
        - destination:
            host: booking-service
            port:
              number: 8080
